# mcadmin

./: .gitignore  CMakeLists.txt  README.md  main.c  test_populate.sh
actions/: actions.c  actions.h
memcache/: commands.c  commands.h  connect.c  connect.h  stats.c  stats.h
src/: main.c
src/actions/: actions.c  actions.h
src/memcache/: commands.c  commands.h  connect.c  connect.h  stats.c  stats.h
src/ui/: modals.c  screens.c  screens.h
ui/: modals.c  modals.h  screens.c  screens.h
